--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,12 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+
 }
