--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,25 +15,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HouseRentProject">
+        <activity
+            android:name=".AdminHomePageDetails"
+            android:exported="false" />
 
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB6aWx4gtHp7fdzaTyJyVY0qGOZipA-1z0"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyB6aWx4gtHp7fdzaTyJyVY0qGOZipA-1z0" />
+
         <activity
             android:name=".PostDetailsActivity"
             android:exported="true"
-            android:parentActivityName=".MyPosts">
-
-
-        </activity>
+            android:parentActivityName=".MyPosts"></activity>
         <activity
             android:name=".AdminHomeActivity"
             android:exported="true" />
         <activity
             android:name=".Profile"
             android:exported="true"
-            android:parentActivityName=".MainActivity">
-
-        </activity>
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".FavListActivity"
             android:parentActivityName=".MainActivity" />
