--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HouseRentProject">
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
         <activity
             android:name=".AdminHomePageDetails"
             android:exported="false" />
@@ -26,14 +29,14 @@
         <activity
             android:name=".PostDetailsActivity"
             android:exported="true"
-            android:parentActivityName=".MyPosts"></activity>
+            android:parentActivityName=".MyPosts" />
         <activity
             android:name=".AdminHomeActivity"
             android:exported="true" />
         <activity
             android:name=".Profile"
             android:exported="true"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FavListActivity"
             android:parentActivityName=".MainActivity" />
