Update Profile Design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,32 +42,49 @@
         <activity
             android:name=".PostDetailsActivity"
             android:exported="true"
-            android:parentActivityName=".MyPosts" />
+            android:parentActivityName=".MyPosts">
+
+        </activity>
         <activity
             android:name=".AdminHomeActivity"
             android:exported="true" />
         <activity
             android:name=".Profile"
             android:exported="true"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+
+        </activity>
         <activity
             android:name=".FavListActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".AccountVerification"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".ResetPassActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".MyPosts"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".PostActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity
             android:name=".DetailsActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity">
+
+        </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity"/>
